@@ -1,3 +1,8 @@
+2001-11-29  Glynn Foster <glynn.foster@sun.com>
+	
+	* panel-gconf.[ch]: Add some more convience methods.
+	Not entirely sure if this is useful yet.
+
 2001-11-29  Mark McLoughlin  <mark@skynet.ie>
 
 	* applet.c: (applet_button_press): tidy.
